--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting.xml
@@ -15,10 +15,29 @@
         android:textColor="@android:color/holo_red_dark"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp"/>
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox_maxVolume"
         android:text="Max volume"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox_snooze"
+        android:text="Can snooze"/>
+    <NumberPicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/numberOfSnoozeTime"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox_preventTurnPhoneOff"
+        android:text="Prevent turning off phone"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox_graduallyIncreaseVolume"
+        android:text="Gradually increase volume"/>
 </LinearLayout>
