--- a/Project/AppBaoThuc/app/src/main/res/layout/activity_main.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
             android:src="@drawable/ic_music"
             app:layout_constraintLeft_toRightOf="@+id/button_setting"
             app:layout_constraintRight_toLeftOf="@+id/button_stop"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="addAlarmAfter1Minute"/>
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,6 +53,7 @@
             android:src="@drawable/ic_stop"
             app:layout_constraintLeft_toRightOf="@+id/button_music"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="addAlarmAfter2Minute"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
