--- a/Project/AlarmTypeApp/app/src/main/res/layout/activity_main.xml
+++ b/Project/AlarmTypeApp/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,8 @@
             android:id="@+id/timePicker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:timePickerMode="spinner"></TimePicker>
+            android:timePickerMode="spinner"
+            app:buttonTint="@color/colortext" ></TimePicker>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -144,11 +145,11 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="40dp"
-                    android:layout_height="33dp"
-                    android:background="@drawable/ic_expand_30" />
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_expand_more_black_24dp" />
             </LinearLayout>
 
         </LinearLayout>
