--- a/Project/AlarmTypeApp/app/src/main/res/layout/fragment_again_dialog.xml
+++ b/Project/AlarmTypeApp/app/src/main/res/layout/fragment_again_dialog.xml
@@ -22,7 +22,7 @@
         android:textStyle="bold" />
 
     <RadioGroup
-        android:id="@+id/moodRadioGroup"
+        android:id="@+id/radioGroupAgain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -88,7 +88,7 @@
 
         <RadioButton
             android:id="@+id/radioButton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
@@ -100,7 +100,7 @@
 
         <RadioButton
             android:id="@+id/radioButton6"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
@@ -111,7 +111,7 @@
 
         <RadioButton
             android:id="@+id/radioButton7"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
@@ -128,7 +128,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/backgroundlayout"
@@ -137,7 +137,7 @@
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnOK"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/backgroundlayout"
