--- a/Project/AlarmTypeApp/app/src/main/res/values/styles.xml
+++ b/Project/AlarmTypeApp/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimaryInverse">@android:color/black</item>
         <item name="android:textColorSecondaryInverse">#FAFAFA</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
 
     </style>
     <style name="BlueTheme" parent="Theme.AppCompat.Light">
