Nhat commit to AlarmType

--- a/Project/AlarmTypeApp/app/src/main/res/layout/activity_type_play_math.xml
+++ b/Project/AlarmTypeApp/app/src/main/res/layout/activity_type_play_math.xml
@@ -121,7 +121,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="textPersonName"
-                    android:text="???"
+                    android:text=""
                     android:textColor="@color/colorBlue" />
 
                 <TableLayout
