--- a/Project/AppBaoThuc/app/src/main/res/values/styles.xml
+++ b/Project/AppBaoThuc/app/src/main/res/values/styles.xml
@@ -6,6 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
+        <item name="android:textColorPrimaryInverse">@android:color/black</item>
+        <item name="android:textColorSecondaryInverse">#FAFAFA</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
 
+    </style>
+    <style name="BlueTheme" parent="Theme.AppCompat.Light">
+        <item name="android:colorControlActivated">#008FFF</item>
+    </style>
 </resources>
