--- a/Project/AppBaoThuc/app/src/main/res/layout/activity_type_play_default.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/activity_type_play_default.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TypePlayDefaultActivity">
+    tools:context=".alarmsetting.TypePlayDefaultActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
