--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
@@ -9,12 +9,12 @@
         android:id="@+id/recyclerView_list_alarm">
     </android.support.v7.widget.RecyclerView>
     <ImageButton
+        android:id="@+id/button_add_alarm"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:id="@+id/button_add_alarm"
+        android:background="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/ic_add"/>
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
