--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toBottomOf="@id/constraintLayout_label" />
 
         <TextView
-            android:id="@+id/textView_hour"
+            android:id="@+id/text_view_hour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
@@ -50,20 +50,20 @@
             app:layout_constraintTop_toBottomOf="@id/textView_ringtoneName" />
 
         <TextView
-            android:id="@+id/textView_colon"
+            android:id="@+id/text_view_colon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=":"
             android:textSize="30sp"
-            app:layout_constraintStart_toEndOf="@id/textView_hour"
+            app:layout_constraintStart_toEndOf="@id/text_view_hour"
             app:layout_constraintTop_toBottomOf="@id/textView_ringtoneName" />
 
         <TextView
-            android:id="@+id/textView_minute"
+            android:id="@+id/text_view_minute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
-            app:layout_constraintStart_toEndOf="@id/textView_colon"
+            app:layout_constraintStart_toEndOf="@id/text_view_colon"
             app:layout_constraintTop_toBottomOf="@id/textView_ringtoneName" />
 
     </android.support.constraint.ConstraintLayout>
