--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,33 +10,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SETTING"
-        android:textStyle="bold"
-        android:textColor="@android:color/holo_red_dark"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@android:color/holo_red_dark"
+        android:textStyle="bold"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"/>
+        tools:layout_editor_absoluteY="0dp" />
+
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/checkBox_maxVolume"
-        android:text="Max volume"/>
-    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Max volume" />
+
+    <CheckBox
         android:id="@+id/checkBox_snooze"
-        android:text="Can snooze"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Can snooze" />
+
     <NumberPicker
+        android:id="@+id/numberOfSnoozeTime"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/numberOfSnoozeTime"/>
+        android:layout_height="wrap_content" />
+
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/checkBox_preventTurnPhoneOff"
-        android:text="Prevent turning off phone"/>
-    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Prevent turning off phone" />
+
+    <CheckBox
         android:id="@+id/checkBox_graduallyIncreaseVolume"
-        android:text="Gradually increase volume"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gradually increase volume" />
 </LinearLayout>
