--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_list_alarm"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView_list_alarm">
+        android:layout_height="match_parent">
+
     </android.support.v7.widget.RecyclerView>
+
     <ImageButton
         android:id="@+id/button_add_alarm"
         android:layout_width="64dp"
