--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_music_picker.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_music_picker.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#222222">
 
     <LinearLayout
         android:id="@+id/linear_layout_music_type_choosing"
@@ -25,11 +26,34 @@
             android:layout_weight="1"
             android:text="Music" />
     </LinearLayout>
-    <FrameLayout
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_list_music"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/fragment_container_music_view"
-        app:layout_constraintTop_toBottomOf="@id/linear_layout_music_type_choosing"
+        app:layout_constraintBottom_toTopOf="@id/constraint_layout_confirm_button"
+        app:layout_constraintTop_toBottomOf="@id/linear_layout_music_type_choosing" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraint_layout_confirm_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent">
-    </FrameLayout>
+
+        <Button
+            android:id="@+id/button_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OK"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/button_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/button_ok" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
