--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_music_picker.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_music_picker.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="#222222">
 
+
     <LinearLayout
         android:id="@+id/linear_layout_music_type_choosing"
         android:layout_width="match_parent"
@@ -25,14 +26,60 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Music" />
+
+
     </LinearLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraint_layout_sort_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout_music_type_choosing">
+
+        <Button
+            android:id="@+id/button_sort_by_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/image_sort_by_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_drop_up"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/button_sort_by_name"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button_sort_by_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Directory"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/image_sort_by_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/image_sort_by_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_drop_up"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/button_sort_by_url"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_list_music"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/constraint_layout_confirm_button"
-        app:layout_constraintTop_toBottomOf="@id/linear_layout_music_type_choosing" />
+        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_sort_type" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraint_layout_confirm_button"
