--- a/Project/AppBaoThuc/app/src/main/res/layout/item_music.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/item_music.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="30dp">
+    android:layout_height="wrap_content">
 
     <CheckBox
         android:id="@+id/check_box_check"
@@ -17,10 +17,22 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/text_view_music_url"
         app:layout_constraintEnd_toStartOf="@id/button_play_music"
         app:layout_constraintStart_toEndOf="@id/check_box_check"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_view_music_url"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/button_play_music"
+        app:layout_constraintStart_toEndOf="@id/check_box_check"
+        app:layout_constraintTop_toBottomOf="@id/text_view_music_name" />
 
     <ImageButton
         android:id="@+id/button_play_music"
