--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
@@ -29,7 +29,6 @@
                 android:id="@+id/button_mute"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="Mute"
                 android:src="@drawable/ic_volume_off"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +40,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_label" />
+            app:layout_constraintTop_toBottomOf="@id/constraintLayout_label" />
 
         <TextView
             android:id="@+id/text_view_hour"
@@ -75,8 +74,7 @@
         android:id="@+id/challenge_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/constraintLayout_header">
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout_header"></FrameLayout>
 
     <Button
         android:id="@+id/button_ok"
