--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge.xml
@@ -17,9 +17,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:inputType="number"
-        app:layout_constraintEnd_toStartOf="@+id/button_confirm"
+        app:layout_constraintEnd_toStartOf="@id/button_confirm"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_question" />
+        app:layout_constraintTop_toBottomOf="@id/textView_question" />
 
     <ImageButton
         android:id="@+id/button_confirm"
