--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -8,7 +8,7 @@
         android:id="@+id/constraintLayout_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_alignParentTop="true">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout_label"
@@ -21,6 +21,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/button_mute"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -74,21 +75,21 @@
         android:id="@+id/challenge_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/constraintLayout_header"></FrameLayout>
+        android:layout_below="@id/constraintLayout_header" />
 
     <Button
         android:id="@+id/button_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OK"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/challenge_fragment_container" />
+        android:layout_below="@id/challenge_fragment_container"
+        android:layout_alignParentEnd="true"
+        android:text="OK" />
 
     <Button
         android:id="@+id/button_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel"
-        app:layout_constraintEnd_toStartOf="@id/button_ok"
-        app:layout_constraintTop_toBottomOf="@id/challenge_fragment_container" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@id/challenge_fragment_container"
+        android:layout_toStartOf="@id/button_ok"
+        android:text="Cancel" />
+</RelativeLayout>
