--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView_question"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="center" />
 
     <EditText
         android:id="@+id/editText_result"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/textView_question"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/button_confirm"
         android:inputType="number"
-        app:layout_constraintEnd_toStartOf="@id/button_confirm"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView_question" />
+        android:textAlignment="center" />
 
     <ImageButton
         android:id="@+id/button_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_confirm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/editText_result"
-        app:layout_constraintTop_toBottomOf="@id/textView_question" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@id/textView_question"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_confirm" />
+</RelativeLayout>
