--- a/Training/QuanLyDonHang/app/src/main/res/values/styles.xml
+++ b/Training/QuanLyDonHang/app/src/main/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowNoTitle">true</item>
+        <item name="colorControlNormal">#000000</item>
+        <item name="colorControlActivated">#28c99e</item>
+        <item name="colorControlHighlight">#d94ed0</item>
     </style>
 
 </resources>
