--- a/Training/QuanLyDonHang/app/src/main/res/layout/activity_mat_hang.xml
+++ b/Training/QuanLyDonHang/app/src/main/res/layout/activity_mat_hang.xml
@@ -12,6 +12,14 @@
         android:gravity="center"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/imageButtonCloseMH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:background="@color/colorPrimaryDark"
+            app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
         <TextView
             android:id="@+id/textViewMH"
             android:layout_width="wrap_content"
@@ -19,18 +27,12 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Mặt Hàng"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/imageButtonCloseMH"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimaryDark"
-            app:srcCompat="@drawable/ic_close_black_24dp" />
     </LinearLayout>
 
     <TableLayout
@@ -169,6 +171,20 @@
             android:layout_weight="1"
             android:text="Edit"
             android:visibility="gone" />
+
+        <Button
+            android:id="@+id/btnFindByMaHG"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="SEARCH" />
+
+        <Button
+            android:id="@+id/btnReLoadMH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RELOAD" />
     </LinearLayout>
 
     <TextView
