--- a/Training/QuanLyDonHang/app/src/main/res/layout/dialogfragment_mat_hang.xml
+++ b/Training/QuanLyDonHang/app/src/main/res/layout/dialogfragment_mat_hang.xml
@@ -27,13 +27,12 @@
         android:textColor="@android:color/background_dark" />
 
     <Button
-        android:id="@+id/buttonViewCTDDHMH"
+        android:id="@+id/btnGetTop3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
-        android:text="Xem chi tiết đơn đặt hàng" />
+        android:text="TOP 3 BÁN CHẠY NHẤT" />
 
     <Button
         android:id="@+id/buttonUpdateMatHang"
@@ -51,4 +50,5 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="40dp"
         android:text="Xóa mặt hàng" />
+
 </LinearLayout>
