--- a/Project/AppBaoThuc/app/src/main/res/layout/activity_main.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,9 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_alarm"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/button_setting" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/button_setting"/>
 
                 <ImageButton
                     android:id="@+id/button_setting"
@@ -46,28 +47,28 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_settings"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/button_alarm"
-                    app:layout_constraintRight_toLeftOf="@+id/button_music" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/button_alarm"/>
 
-                <ImageButton
-                    android:id="@+id/button_music"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_music"
-                    android:onClick="test1"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/button_setting"
-                    app:layout_constraintRight_toLeftOf="@+id/button_stop" />
+                <!--<ImageButton-->
+                    <!--android:id="@+id/button_music"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:src="@drawable/ic_music"-->
+                    <!--android:onClick="test1"-->
+                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--app:layout_constraintLeft_toRightOf="@+id/button_setting"-->
+                    <!--app:layout_constraintRight_toLeftOf="@+id/button_stop" />-->
 
-                <ImageButton
-                    android:id="@+id/button_stop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_stop"
-                    android:onClick="test2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/button_music"
-                    app:layout_constraintRight_toRightOf="parent" />
+                <!--<ImageButton-->
+                    <!--android:id="@+id/button_stop"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:src="@drawable/ic_stop"-->
+                    <!--android:onClick="test2"-->
+                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--app:layout_constraintLeft_toRightOf="@+id/button_music"-->
+                    <!--app:layout_constraintRight_toRightOf="parent" />-->
             </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
     </FrameLayout>
