--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge.xml
@@ -4,26 +4,36 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView_question"
+        android:id="@+id/text_view_problem_left"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center" />
+        android:textSize="23sp" />
+
+    <TextView
+        android:id="@+id/text_view_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text_view_problem_left"
+        android:text="text_view_question"
+        android:textAlignment="center"
+        android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/editText_result"
+        android:id="@+id/edit_text_result"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_question"
+        android:layout_below="@id/text_view_question"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@id/button_confirm"
         android:inputType="number"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="18sp" />
 
     <ImageButton
         android:id="@+id/button_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_question"
+        android:layout_below="@id/text_view_question"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_confirm" />
+        android:src="@drawable/ic_check_black_24dp" />
 </RelativeLayout>
