--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_music_picker.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_music_picker.xml
@@ -96,7 +96,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/button_cancel"
+            android:id="@+id/button_give_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
