--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_shake_challenge.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_shake_challenge.xml
@@ -4,12 +4,11 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/text_view_count"
+        android:id="@+id/text_view_shake_number_of_problem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:text="a"
-        android:textAlignment="center" />
-
+        android:textAlignment="center"
+        android:textSize="23sp" />
 </RelativeLayout>
