--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_type.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_type.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundlayout"
-    android:orientation="vertical"
-    tools:context=".alarmsetting.TypeActivity">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -302,40 +301,15 @@
         android:gravity="bottom"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btnOK"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/backgroundmain"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnCancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/backgroundmain"
-                android:text="Hủy"
-                android:textColor="@color/colortext"
-                android:textSize="18sp" />
-
-            <View
-                android:id="@+id/view4"
-                android:layout_width="1dp"
-                android:layout_height="30dp"
-                android:background="@android:color/background_light" />
-
-            <Button
-                android:id="@+id/btnOK"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/backgroundmain"
-                android:text="OK"
-                android:textColor="@color/colortext"
-                android:textSize="18sp" />
-        </LinearLayout>
+            android:text="OK"
+            android:textColor="@color/colortext"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
