--- a/Project/AppBaoThuc/app/src/main/res/layout/activity_setting_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/activity_setting_alarm.xml
@@ -18,6 +18,11 @@
         android:background="@color/backgroundlayout"
         android:orientation="vertical">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#999898" />
+
         <TimePicker
             android:id="@+id/timePicker"
             android:layout_width="match_parent"
