--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting_alarm.xml
@@ -17,15 +17,6 @@
         android:background="@color/backgroundlayout"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewTimeLeft"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:text="Báo thức đặt cho 22 giờ và 36 phút tính từ bây giờ."
-            android:textColor="@color/colortext2"
-            android:textSize="16dp" />
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -41,7 +32,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -96,7 +87,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/backgroundlayout"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -164,7 +155,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/backgroundlayout"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/textView45"
@@ -195,7 +186,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/backgroundlayout"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/textView44"
@@ -232,7 +223,7 @@
         android:background="@color/backgroundlayout"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -245,10 +236,10 @@
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="wrap_content"
-            android:max="1000"
             android:layout_height="wrap_content"
-            android:theme="@style/BlueTheme"
-            android:layout_weight="15" />
+            android:layout_weight="15"
+            android:max="1000"
+            android:theme="@style/BlueTheme" />
 
         <Button
             android:id="@+id/btnPlayMusic"
@@ -284,7 +275,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/backgroundlayout"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/textView4"
@@ -323,7 +314,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/backgroundlayout"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/textView43"
